Setup Integration Tests, Replaced Cobertura w/ JaCoCo, Updated Tests

--- a/src/main/webapp/register_success.xhtml
+++ b/src/main/webapp/register_success.xhtml
@@ -14,7 +14,7 @@
 			<div class="row-fluid">
 				<div class="span9">
 					<h1>Registration</h1>
-					<p>SUCCESS!</p>
+					<p>Thank you for registering. Your account is now ready. Please <a href="login.xhtml">login to continue</a>.</p>
 				</div>
 			</div>
 		</ui:define>
