Removing Shiro Config.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,9 +21,9 @@
 					insurance &amp; service records.</p>
 				<div class="well">
 					<p>
-						<a class="btn btn-primary btn-large" href="register.xhtml"><i
+						<a class="btn btn-primary btn-large" href="/register.xhtml"><i
 							class="icon-pencil icon-white"></i> Register Now &#187;</a> <a
-							class="btn btn-info btn-large pull-right" href="#login"><i
+							class="btn btn-info btn-large pull-right" href="/login.xhtml"><i
 							class="icon-lock icon-white"></i> Sign In &#187;</a>
 					</p>
 				</div>
