--- a/src/main/webapp/user/account.xhtml
+++ b/src/main/webapp/user/account.xhtml
@@ -13,8 +13,8 @@
 		<ui:define name="body">
 			<div class="row-fluid">
 				<div class="span9">
-					<h1>Registration</h1>
-					<p>Thank you for registering. Your account is now ready. Please <a href="/login.xhtml">login to continue</a>.</p>
+					<h1>My Account</h1>
+					<p>Thank You #{identity.username} for Logging In. This is your Account Page.</p>
 				</div>
 			</div>
 		</ui:define>
