--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -6,7 +6,7 @@
 <h:body>
 	<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 		xmlns:ui="http://java.sun.com/jsf/facelets"
-		template="templates/master.xhtml">
+		template="/templates/master.xhtml">
 		<ui:define name="title">
 		Registration
 	</ui:define>
