--- a/src/main/webapp/logout_success.xhtml
+++ b/src/main/webapp/logout_success.xhtml
@@ -8,13 +8,13 @@
 		xmlns:ui="http://java.sun.com/jsf/facelets"
 		template="/templates/master.xhtml">
 		<ui:define name="title">
-		Registration
+		Logout
 	</ui:define>
 		<ui:define name="body">
 			<div class="row-fluid">
 				<div class="span9">
-					<h1>Registration</h1>
-					<p>Thank you for registering. Your account is now ready. Please <a href="#{root}login.xhtml">login to continue</a>.</p>
+					<h1>Logout</h1>
+					<p>Your account has been logged out. Please <a href="#{root}login.xhtml">login again to continue</a>.</p>
 				</div>
 			</div>
 		</ui:define>
