--- a/src/main/webapp/user/account.xhtml
+++ b/src/main/webapp/user/account.xhtml
@@ -8,7 +8,7 @@
 		xmlns:ui="http://java.sun.com/jsf/facelets"
 		template="/templates/master.xhtml">
 		<ui:define name="title">
-		Registration
+		My Account
 	</ui:define>
 		<ui:define name="body">
 			<div class="row-fluid">
