--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -75,13 +75,14 @@
 								<label class="control-label" for="password">* Password</label>
 								<div class="controls">
 									<h:inputSecret class="input-xlarge" id="password" value="#{regBean.password}" binding="#{password}"></h:inputSecret>
-									<span class="help-inline"><h:message for="password"></h:message></span>
+									<span class="help-inline"><h:messages for="password"></h:messages></span>
 								</div>
 
 								<label class="control-label" for="confirmationPassword">* Confirm
 									Password</label>
 								<div class="controls">
 									<h:inputSecret class="input-xlarge" id="confirmationPassword" value="#{regBean.confirmationPassword}"></h:inputSecret>
+									<span class="help-inline"><h:message for="confirmationPassword"></h:message></span>
 								</div>
 							</div>
 						</fieldset>
