#14: Updating Tests to Support Form Logins. Currently Broken.

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -77,7 +77,7 @@
 						</fieldset>
 
 						<div class="form-actions">
-							<h:commandButton type="submit" class="btn btn-primary" value="Login" action="#{loginBean.login}"></h:commandButton>
+							<h:commandButton id="loginButton" type="submit" class="btn btn-primary" value="Login" action="#{loginBean.login}"></h:commandButton>
 						</div>
 					</h:form>
 				</div>
