#14: Adding Stubs for Additional UI Tests [ci skip]

--- a/src/main/webapp/account/index.xhtml
+++ b/src/main/webapp/account/index.xhtml
@@ -35,7 +35,7 @@
 	</ui:define>
 		<ui:define name="body">
 			<div class="hero-unit">
-				<h1>My Account</h1>
+				<h1 id="pageTitle">My Account</h1>
 				<p>You are now Logged In.</p>
 			</div>
 		</ui:define>
